Update AWS comment with HTML

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -208,5 +208,11 @@ strong {
       font-size: 14px;
       line-height: 18px;
     }
+    ul {
+      padding-left: 15px;
+      li {
+        list-style: circle !important;
+      }
+    }
   }
 }
